# eos-desktop

./: .gitignore  .gitmodules  HACKING  Makefile.am  README  autogen.sh  configure.ac  deps.sh  jasmine  jasmine.json  jenkinsTestPlugin.js  run_gjs_tests  test_all
.tx/: config
data/: 99-gdm-eos-shell-settings  Makefile.am  eos-app-feedback.desktop  eos-app-feedback.desktop.in.in  eos-app-tutorial.desktop.in.in  eos-launch.desktop.in.in  eos-session.desktop.in.in  eos-shell-extension-prefs.desktop.in.in  eos-shell.desktop.in.in  eos-shell.session.in.in  gdm-eos-shell.desktop.in.in  gdm-eos-shell.session  gnome-shell-theme.gresource.xml  logout.desktop  org.gnome.shell.gschema.xml.in.in  resfix  restart.desktop  shutdown.desktop  vendor-customer-support.ini
data/theme/: gnome-shell.css
debian/: .gitignore  changelog  control  control.in  copyright  eos-shell.gsettings-override  eos-shell.install  eos-shell.links  eos-shell.lintian-overrides  eos-shell.postinst  gnome-shell-common.install  rules
docs/reference/shell/: Makefile.am  shell-docs.sgml.in
docs/reference/st/: Makefile.am
eos-data/desktop/: applications.csv  csv_to_desktop_applications.py  links.csv
eos-data/desktop/applications/: armagetron.desktop  audacity.desktop  billardgl.desktop  blockout.desktop  calc.desktop  chromium-bsu.desktop  email.desktop  epiphany.desktop  freecell.desktop  gbrainy.desktop  gcompris.desktop  geniusmath.desktop  goldendict.desktop  impress.desktop  kobodeluxe.desktop  lbreakout.desktop  music.desktop  nautilus.desktop  numptyphysics.desktop  openarena.desktop  pcmanfm.desktop  photo-editor.desktop  photos.desktop  pingus.desktop  qBittorrent.desktop  shotwell.desktop  skype.desktop  solitaire.desktop  spreadsheet.desktop  stellarium.desktop  sudoku.desktop  supertux.desktop  teeworlds.desktop  tuxkart.desktop  tuxmath.desktop  tuxtyping.desktop  video.desktop  weather.desktop  writer.desktop  youtube.desktop
eos-data/desktop/links/: angrybirds.desktop  bandnews.desktop  bol.desktop  botafogo.desktop  brasil.desktop  brasilescola.desktop  catho.desktop  cifraclub.desktop  cinema.desktop  clickjogos.desktop  clima.desktop  climatempo.desktop  cnn.desktop  codeacademy.desktop  crflamengo.desktop  curriculo.desktop  curriculum.desktop  delegacias.desktop  disquedenuncia.desktop  economist.desktop  empregocerto.desktop  empregosrj.desktop  extra.desktop  facebook.desktop  fluminense.desktop  fofoca.desktop  g1.desktop  gazetaesportiva.desktop  globo.desktop  globoesporte.desktop  globotv.desktop  globotvnews.desktop  gnt.desktop  google.desktop  googletranslate.desktop  gritodanacao.desktop  grooveshark.desktop  guatemala.desktop  guiadasemana.desktop  imdb.desktop  (+65 more)
js/: Makefile.am  Makefile.in  js-resources.gresource.xml
js/extensionPrefs/: main.js
js/gdm/: loginDialog.js  realmd.js  util.js
js/misc/: actorVisibility.js  config.js.in  coreEnvironment.js  eos-launch.js  extensionUtils.js  ibusManager.js  loginManager.js  missionGameService.js  util.js
js/ui/: altTab.js  animation.js  appActivation.js  appDisplay.js  appFavorites.js  appIconBar.js  appStore.js  background.js  backgroundMenu.js  boxpointer.js  buttonConstants.js  calendar.js  closeButton.js  codingManager.js  ctrlAltTab.js  dash.js  dateMenu.js  dnd.js  endSessionDialog.js  environment.js  extensionSystem.js  forceAppExitDialog.js  grabHelper.js  ibusCandidatePopup.js  iconGrid.js  iconGridLayout.js  internetSearch.js  keyboard.js  layout.js  lookingGlass.js  magnifier.js  main.js  messageTray.js  messageTrayMarkup.js  modalDialog.js  notificationDaemon.js  osdWindow.js  overview.js  overviewControls.js  panel.js  (+28 more)
js/ui/components/: appStore.js  autorunManager.js  codingGameService.js  codingManager.js  discoveryFeed.js  missionChatbox.js  missionGameService.js  missionManager.js  networkAgent.js  polkitAgent.js  socialBar.js  telepathyClient.js  updaterManager.js
js/ui/status/: accessibility.js  bluetooth.js  chat.js  codingGame.js  hotCornerIndicator.js  keyboard.js  missionGame.js  network.js  power.js  social.js  system.js  volume.js
m4/: eos-coverage.m4
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  change_msgid.sh  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  eos-desktop.pot  eos-shell.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hu.po  (+46 more)
src/: Makefile-calendar-server.am  Makefile-hotplug-sniffer.am  Makefile-st.am  Makefile-tray.am  Makefile.am  eos-shell-jhbuild.in  gnome-shell-extension-prefs.c  gnome-shell-plugin.c  main.c  org.gnome.Shell.provider  run-js-test.c  shell-app-system.c  shell-app-system.h  shell-app-usage.c  shell-app.c  shell-app.h  shell-desktop-dir-info.c  shell-desktop-dir-info.h  shell-dir-info.c  shell-dir-info.h  shell-global.c  shell-global.h  shell-grid-desaturate-effect.c  shell-grid-desaturate-effect.h  shell-gtk-embed.c  shell-js.c  shell-js.cpp  shell-keybinding-modes.h  shell-network-agent.c  shell-page-flip-effect.c  shell-page-flip-effect.h  shell-recorder-src.c  shell-recorder.c  shell-screenshot.c  shell-slicer.c  shell-util.c  shell-util.h  shell-window-tracker.c  shell-window-tracker.h  shell-wm-private.h  (+4 more)
src/st/: st-border-image.c  st-box-layout.c  st-button.c  st-entry.c  st-entry.h  st-icon.c  st-im-text.c  st-im-text.h  st-label.c  st-private.c  st-scroll-view.c  st-texture-cache.c  st-texture-cache.h  st-theme-node-drawing.c  st-theme-node.c  st-theme-node.h  st-theme.c  st-widget.c
tests/: Makefile.am  README.txt  jasmine_runner.js  run-gjs-tests
tests/eos_harness_test/: testNoSetupOrTearDown.js  testbar.js  testfoo.js
tests/eos_harness_test/subdir/: testbar.js
tests/js/ui/: sessionModeTest.js
tests/test_example/: foo_test.js  some_class.js
tests/unit/: format.js  format_test.js  insertSorted.js  insertSorted_test.js  jsParse.js  jsParse_test.js  markup.js  markup_test.js  url.js  url_test.js
